K8_resources/setup-2026/nextcloud_onlyoffice/nextcloud-app.yaml
# nextcloud-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  selector: { matchLabels: { app: nextcloud } }
  template:
    metadata: { labels: { app: nextcloud } }
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:latest
        ports: [{ containerPort: 80 }]
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports: [{ port: 80, targetPort: 80 }]
  selector: { app: nextcloud }
