K8_resources/setup-2026/nextcloud_onlyoffice/nextcloud-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
spec:
  selector: { matchLabels: { app: nextcloud-db } }
  template:
    metadata: { labels: { app: nextcloud-db } }
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
      volumes:
      - name: db-data
        persistentVolumeClaim: { claimName: nextcloud-db-pvc }
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
spec:
  ports: [{ port: 3306 }]
  selector: { app: nextcloud-db }
