K8_resources/setup-2026/nextcloud_onlyoffice/onlyoffice.yaml
# onlyoffice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlyoffice
spec:
  selector: { matchLabels: { app: onlyoffice } }
  template:
    metadata: { labels: { app: onlyoffice } }
    spec:
      containers:
      - name: onlyoffice
        image: onlyoffice/documentserver:latest
        ports: [{ containerPort: 80 }]
---
apiVersion: v1
kind: Service
metadata: { name: onlyoffice }
spec:
  ports: [{ port: 80, targetPort: 80 }]
  selector: { app: onlyoffice }
